<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 供託、積棒、回転 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- 供託 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Kyotaku" />

                    <EditText
                        android:id="@+id/KyotakuInput"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:gravity="right"
                        android:inputType="number"
                        android:maxLength="3" >
                    </EditText>

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BoUnit" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="    " />

                    <!-- 積棒 -->

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tsumibo" />

                    <EditText
                        android:id="@+id/TsumiboInput"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:gravity="right"
                        android:inputType="number"
                        android:maxLength="3" >
                    </EditText>

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BoUnit" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="    " />
                    <!-- 回転 -->

                    <ImageButton
                        android:id="@+id/RotateBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/rotate" />
                </TableRow>
            </TableLayout>

            <!-- 対面 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/ToimenBtn"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sya" />

                    <EditText
                        android:id="@+id/ToimenInput"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:gravity="right"
                        android:inputType="numberSigned"
                        android:maxLength="6" >
                    </EditText>

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PointUnit00" />
                </TableRow>
            </TableLayout>

            <!-- 上家、下家 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <!-- 上家 -->

                    <Button
                        android:id="@+id/KamityaBtn"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Pei" />

                    <EditText
                        android:id="@+id/KamityaInput"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:gravity="right"
                        android:inputType="numberSigned"
                        android:maxLength="6" >
                    </EditText>

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PointUnit00" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="        " />
                    <!-- 下家 -->

                    <EditText
                        android:id="@+id/ShimotyaInput"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:gravity="right"
                        android:inputType="numberSigned"
                        android:maxLength="6" >
                    </EditText>

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PointUnit00" />

                    <Button
                        android:id="@+id/ShimotyaBtn"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Nan" />
                </TableRow>
            </TableLayout>

            <!-- 自分 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/BaseBtn"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Ton"
                        android:textColor="#0000ff" />

                    <EditText
                        android:id="@+id/BaseInput"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:gravity="right"
                        android:inputType="numberSigned"
                        android:maxLength="6"
                        android:textColor="#0000ff" >

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PointUnit00Me"
                        android:textColor="#0000ff" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>