<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 供託、積棒、回転 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- 供託 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Kyotaku" />

                    <TextView
                        android:id="@+id/KyotakuDisp"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BoUnit" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="    " />

                    <!-- 積棒 -->

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tsumibo" />

                    <TextView
                        android:id="@+id/TsumiboDisp"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BoUnit" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="    " />
                    <!-- 回転 -->

                    <ImageButton
                        android:id="@+id/RotateBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/rotate" />
                </TableRow>

                <!-- 対面 -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" >

                        <Button
                            android:id="@+id/ToimenBtn"
                            style="@style/TextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>

                <!-- 上家、下家 -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" >

                        <!-- 上家 -->

                        <Button
                            android:id="@+id/KamityaBtn"
                            style="@style/TextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <!-- 下家 -->

                        <Button
                            android:id="@+id/ShimotyaBtn"
                            style="@style/TextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>

                <!-- 自分 -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" >

                        <Button
                            android:id="@+id/BaseBtn"
                            style="@style/TextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#0000ff" />
                    </TableRow>
                </TableLayout>

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Me"
                    android:textColor="#0000ff" />

                <!--  -->
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>